--- a/webclient/public/stylesheets/webyast-firewall.css
+++ b/webclient/public/stylesheets/webyast-firewall.css
@@ -92,7 +92,7 @@
 }
 
 #firewallForm  { padding:0px 10px 10px 10px; }
-#firewallForm .nav-buttons { margin:0; }
+#firewall-wrapper { padding:10px; }
 
 #firewallForm .firstChar {
   color:#777;
