--- a/plugins/activedirectory/app/views/activedirectory/index.html.erb
+++ b/plugins/activedirectory/app/views/activedirectory/index.html.erb
@@ -20,8 +20,8 @@
 -->
 
 <% content_for :head do %>
-  <%= javascript_include_tag "jquery.activity", "notifier" %>
-  <%= javascript_include_tag "validation.js" %>
+  <% javascript_include_tag "jquery.activity", "notifier" %>
+  <% javascript_include_tag "validation.js" %>
   <script type="text/javascript">
     $(document).ready(function() {
       <% if @poll_for_updates %>
@@ -38,18 +38,18 @@
       }
 
       $("#activedirectory_enabled").click(function () {
-	if ($("#activedirectory_enabled:checked").length == 0) {
-	  $("#activedirectory_domain").attr("disabled","disabled");
-	} else {
-	  $("#activedirectory_domain", "#activedirectoryForm").removeAttr("disabled");
-	}
+        if ($("#activedirectory_enabled:checked").length == 0) {
+          $("#activedirectory_domain").attr("disabled","disabled");
+        } else {
+          $("#activedirectory_domain", "#activedirectoryForm").removeAttr("disabled");
+        }
       });
 
       $('#activedirectoryForm input[type="submit"]').click(function() {
-	if ($('#activedirectoryForm').valid()) {
-	  var message = <%= jss _("Please wait") -%>;
-	  $.modalDialog.wait( {message: message});
-	}
+        if ($('#activedirectoryForm').valid()) {
+          var message = <%= jss _("Please wait") -%>;
+          $.modalDialog.wait( {message: message});
+        }
       });
     });
   </script>
@@ -57,40 +57,80 @@
 
 <% disabled = !@permissions[:write] %>
 
-<div class='plugin-icon'><img src='../icons/yast-samba-client.png'/> <%= _("Active Directory") %><span id="questionMark">?</span></div>
-<div class='plugin-content'>
+<!-- <div class='plugin-icon'><img src='../icons/yast-samba-client.png'/> <%= _("Active Directory") %><span id="questionMark">?</span></div>
+<div class='plugin-content'> -->
+<div class="plugin-content plugin-border">
   <%= render :partial => 'shared/missing_write_permissions' if disabled %>
-    <% form_for(:activedirectory, @activedirectory, :url => { :action => 'update' }, :html => { :method => :put, :id => 'activedirectoryForm', :autocomplete => :off }) do |f| %>
-      <fieldset>
-	<p>
-	  <%= check_box 'activedirectory', :enabled, {:disabled => disabled, :checked => @activedirectory.enabled}, true,false -%>
-	  <%= _("Enable Authentication of AD users") %>
-	</p>
-	<p>
-	  <%= label_tag :activedirectory_domain, _("Active Directory Domain") %>
-	  <%= text_field :activedirectory, :domain, :disabled => disabled, :class => 'required'  %>
-	</p>
-      </fieldset>
-    
-      <% if @activedirectory.respond_to? :administrator %>
-      <fieldset>
-	<p>
-	  <%= label_tag :activedirectory_administrator, _("Adminstrator User Name") %>
-	  <%= text_field :activedirectory, :administrator, :disabled => disabled, :class => 'required'  %>
-	</p>
-	<p>
-	  <%= label_tag :activedirectory_password, _("Password") %>
-	  <%= password_field :activedirectory, :password, :disabled => disabled, :class => 'required'  %>
-	</p>
-	<p>
-	  <%= label_tag :activedirectory_machine, _("Machine Account") %>
-	  <%= text_field :activedirectory, :machine, :disabled => disabled  %>
-	</p>
-      </fieldset>
-    <% end %>
-    <div class="nav-buttons">
-      <%= form_send_buttons :disabled => disabled %>
+    <% form_for(:activedirectory, @activedirectory, :url => { :action => 'update' }, :html => { :method => :put, :id => 'activedirectoryForm', :class=>"webyast_form", :autocomplete => :off }) do |f| %>
+      <div class="plugin-header">
+        <div class="left">
+          <label class="plugin-icon-container"><img class="plugin-icon" src="/icons/active_directory.png"></label>
+          <label class="plugin-name"><%= _("Active Directory") %></label>
+        </div>
+        <div class="right" >
+          <span id="questionMark" style="margin:2px 5px; float:none;">?</span>
+        </div>
+        <div class="clearfix"></div>
     </div>
+
+    <div class="clearfix">&nbsp;</div>
+
+    <fieldset class="webyast_fieldset">
+      <div class="fieldset_header">
+        <span class="fieldset_header_title" >
+          <%= _("Enable Authentication of AD users") %>
+          <%= check_box 'activedirectory', :enabled, {:disabled => disabled, :checked => @activedirectory.enabled}, true,false -%>
+        </span>
+      </div>
+
+      <div class="fieldset_body">
+        <div class="row">
+          <%= label_tag :activedirectory_domain, _("Active Directory Domain") %>
+          <%= text_field :activedirectory, :domain, :disabled => disabled, :class => 'required'  %>
+        </div>
+      </div>
+    </fieldset>
+    
+    <% if @activedirectory.respond_to? :administrator %>
+
+    <fieldset class="webyast_fieldset">
+      <div class="fieldset_header">
+        <span class="fieldset_header_title" >
+          <%= _("Account settings") %>
+        </span>
+      </div>
+
+      <div class="fieldset_body">
+        <div class="row">
+          <%= label_tag :activedirectory_administrator, _("Adminstrator User Name") %>
+          <%= text_field :activedirectory, :administrator, :disabled => disabled, :class => 'required'  %>
+        </div>
+      </div>
+      
+      <div class="fieldset_body">
+        <div class="row">
+          <%= label_tag :activedirectory_password, _("Password") %>
+          <%= password_field :activedirectory, :password, :disabled => disabled, :class => 'required'  %>
+        </div>
+      </div>
+      
+      <div class="fieldset_body">
+        <div class="row">
+          <%= label_tag :activedirectory_machine, _("Machine Account") %>
+          <%= text_field :activedirectory, :machine, :disabled => disabled  %>
+        </div>
+      </div>
+    </fieldset>
+    <% end %>
+    
+    <div class="clearfix"></div>
+    <div class="button_container">
+      <div class="hr">&nbsp;</div>
+      <div class="nav-buttons">
+        <%= form_send_buttons :disabled => disabled %>
+      </div>
+    </div>
+    
   <% end %>
   </div>
 
