--- a/webclient/public/stylesheets/webyast-modal-dialog.css
+++ b/webclient/public/stylesheets/webyast-modal-dialog.css
@@ -51,7 +51,8 @@ div.blockMsg {
 #modalWindowShade {
 /*  -moz-box-shadow: inset 0px 0px 300px #111;*/
 /*  -webkit-box-shadow: inset 0px 0px 300px #111;*/
-  background: url("../images/stripes-bg.png") repeat-x #a0a0a0;
+/*  background: url("../images/stripes-bg.png") repeat-x #a0a0a0;*/
+  background-color: #a0a0a0;
 /*  background: url('/images/gradientx40.png') repeat-x #3494f2;*/
   opacity:0.6;/
 /*  -moz-opacity:0.5;*/
