--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -27,7 +27,7 @@
 
   <script type="text/javascript">
   var AUTH_TOKEN = 'authenticity_token=' + encodeURIComponent("<%= escape_javascript form_authenticity_token %>");
-  startNotifier({'module':'network', 'AUTH_TOKEN':AUTH_TOKEN}, 1000, 11000);
+  startNotifier({'module':'dns,hostname,interfaces,routes', 'AUTH_TOKEN':AUTH_TOKEN}, 1000, 11000);
 
   $(document).ready(function() {
     validateIPv4("ip");
