- Devel build 9.32 has messed networking configuration in webyast (bnc#694283) - WebYaST UI validation rules for hostname are based on RFC-952 and RFC-1123 requirements - Accept only one domain name per host - webyast-network-ui-0.2.11

--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -34,7 +34,10 @@
     validateSubnetMask("netmask"); //accept prefixlen and common subnet mask format e.g. 255.255.255.0
     validateHostName("hostname");
     validateDefaultRoute("default_route");
-    validateDomainNameWithAndWithoutTLD("domain");
+    //Devel build 9.32 has messed networking configuration in webyast (bnc#694283)
+    //validateDomainNameWithAndWithoutTLD("domain");
+    //accept only one domain name!!!
+    validateDomainName("domain");
     validateNameservers("nameservers");
     validateDomainNameWithAndWithoutTLD("searchdomains");
 
