- replaced plugin overview heading trough "Frequently used modules"

--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -125,7 +125,7 @@
     <div class="overview" style="">
        <div id="filter">
           <span id="filter_recent" id="visible_filters">
-            <span value="Recently used" style="font-size:14px;"><%= _("Recently used modules") %></span>
+            <span value="Recently used" style="font-size:14px;"><%= _("Frequently used modules:") %></span>
           </span>
 
           <label id="filter_all" value="All" class="quicksand_button quicksand_button_right" value="All" style="float:right"><%= _("All") %></label>
