polling also for users

--- a/plugins/roles/app/views/roles/index.rhtml
+++ b/plugins/roles/app/views/roles/index.rhtml
@@ -158,7 +158,7 @@
 
   <script type="text/javascript">
     var AUTH_TOKEN = 'authenticity_token=' + encodeURIComponent("<%= escape_javascript form_authenticity_token %>");
-    startNotifier({'module':'roles', 'AUTH_TOKEN':AUTH_TOKEN}, 1000, 11000);
+    startNotifier({'module':'roles,users', 'AUTH_TOKEN':AUTH_TOKEN}, 1000, 11000);
 
     $(document).ready(function(){
       function validateRoleName(name) {
