- enabled nginx gzip comperssion for static components - added expires headers for static components - optimized WebYaST UI (YSlow) - improved frequently used modules script - webyast-base-ui-0.2.43

--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -17,12 +17,14 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
 #++
 %>
+
+
 <% content_for :head do %>
   <%= javascript_include_tag :defaults %>
-  <%= javascript_include_tag "jquery.easing.1.3" %>
-  <% javascript_include_tag "jquery-css-transform" %>
-  <% javascript_include_tag "jquery-animate-css-rotate-scale" %>
-  <%= javascript_include_tag "jquery.quicksand" %>
+  <% if JSMIN != true %>
+    <%= javascript_include_tag "jquery.easing.1.3" %>
+    <%= javascript_include_tag "jquery.quicksand" %>
+  <% end %>
 <% end %>
 
 
