--- a/plugins/status/app/views/status/edit.html.erb
+++ b/plugins/status/app/views/status/edit.html.erb
@@ -22,6 +22,7 @@
 <% write_disabled = !@permissions[:writelimits] %>
 
 <% content_for :head do %>
+
    <!--<%= javascript_include_tag :defaults %>-->
 
    <% javascript_tag do -%>
@@ -72,14 +73,30 @@
   <% end %>
 <% end %>
 
-<div class='plugin-icon'><img alt="monitoring" src='/icons/monitoring.png'/><%=_("Status") + header_spacer + _("Settings")%><span id="questionMark">?</span></div>
-<div class="plugin-content">
-<% form_tag( {:action => :save} , { :onsubmit => "return validateLimits();"} ) do %>
-  <div class="accordion">
+<!--<div class='plugin-icon'><img alt="monitoring" src='/icons/monitoring.png'/><%_("Status") + header_spacer + _("Settings")%><span id="questionMark">?</span></div>
+<div class="plugin-content"> -->
+<div class="plugin-content plugin-border">
+
+
+<% form_tag( {:action => :save} , { :class=>"webyast_form", :onsubmit => "return validateLimits();"} ) do %>
+  <div class="plugin-header">
+    <div class="left">
+      <label class="plugin-icon-container"><img class="plugin-icon" src="/icons/monitoring.png"></label>
+      <label class="plugin-name"><%=_("Status") + header_spacer + _("Settings")%></label>
+    </div>
+
+    <div class="right" >
+        <!--<span id="questionMark" style="margin:0px 5px; float:none;">?</span>-->
+    </div>
+    <div class="clearfix"></div>
+  </div>
+
+  <div class="clearfix">&nbsp;</div>
+  <div class="accordion" style="padding:5px;">
   <% @graphs.each do |group| %>
-    <fieldset id="<%= group.id %>">
+    <fieldset id="<%= group.id %>" style="border:1px solid #d0d0d0; border-radius:2px; background-color:#f0f0f0" >
       <legend id="<%= group.id %>"><%= group.id %></legend>
-      <div>
+      <div style="padding:5px;">
         <% group.single_graphs.each do |single_graph| %>
           <% group_name = (group.single_graphs.size > 1) ? single_graph.headline : "" %>
           <label>Alarm, if <%= group_name %></label>
@@ -111,11 +128,15 @@
     </fieldset>
   <% end %>
   </div>
-  <div class="nav-buttons">
-    <%= form_next_button :disabled => write_disabled %>
-    <%= form_str_spacer %>
-    <%= form_back_button :action => :index%>
+
+  <div class="button_container">
+    <div class="hr">&nbsp;</div>
+    <div class="nav-buttons">
+      <%= form_next_button :disabled => write_disabled %>
+      <%= form_str_spacer %>
+      <%= form_back_button :action => :index%>    </div>
   </div>
+
 <% end %>
 </div>
 
