--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -22,10 +22,10 @@
 <% content_for :head do %>
   <!--[if IE]><%= javascript_include_tag "excanvas.js" %><![endif]-->
   <%= javascript_include_tag "jrails.js" %>
-
   <% if JSMIN == true %>
     <%= javascript_include_tag "min/status-min" %>
   <% else %>
+    <%= stylesheet_link_tag "webyast-status" %>
     <%= javascript_include_tag "jquery.jqplot.js" %>
     <%= javascript_include_tag "plugin/jqplot.categoryAxisRenderer.js" %>
     <%= javascript_include_tag "plugin/jqplot.dateAxisRenderer.js" %>	
@@ -56,10 +56,25 @@
 
 <!--<%= javascript_include_tag :defaults %>-->
 
-<div class='plugin-icon'><img alt="monitoring" src='/icons/monitoring.png' width="48px" height="48"/><%=_("Status")%><span id="questionMark">?</span></div>
-<div class="plugin-content">
+<!-- <div class='plugin-icon'><img alt="monitoring" src='/icons/monitoring.png' width="48px" height="48"/><%=_("Status")%><span id="questionMark">?</span></div>
+<div class="plugin-content"> -->
 
+<div class="plugin-content plugin-border">
+<div class="webyast_form">
 <div class="accordion">
+  <div class="plugin-header">
+    <div class="left">
+      <label class="plugin-icon-container"><img class="plugin-icon" src="/icons/monitoring.png"></label>
+      <label class="plugin-name"><%=_("Status")%></label>
+    </div>
+
+    <div class="right" >
+        <span id="questionMark" style="margin:0px 5px; float:none;">?</span>
+    </div>
+    <div class="clearfix"></div>
+  </div>
+
+  <div class="clearfix">&nbsp;</div>
 <% if @graphs %>
   <% @graphs.each do |group| %>
     <div class="list-fieldset"> <!-- RORSCAN_INL_12 th whole block -->
@@ -189,11 +204,16 @@
                                  :update => log_id(log.id)) #currently due missing '=' disabled %>
 <% end %>
 </div>
-  <div class="nav-buttons">
-    <p>
-      <%= link_to  _("Edit Limits"), '/status/edit' %>
-    </p>
-  <%= form_back_button %> 
+
+  
+
+  <div class="button_container">
+    <div class="nav-buttons">
+        <div class="hr">&nbsp;</div>
+      <p><%= link_to  _("Edit Limits"), '/status/edit' %></p>
+      <%= form_back_button %> 
+    </div>
   </div>
+</div>
 </div>
 
