--- a/webclient/public/stylesheets/webyast-forms.css
+++ b/webclient/public/stylesheets/webyast-forms.css
@@ -84,7 +84,7 @@
   vertical-align:middle;
   border-bottom: 1px solid #d8d8d8;
   background: -webkit-gradient(linear, left top, left bottom, from(#ededed), to(#e4e4e4));
-  background: -moz-linear-gradient(center bottom, #e4e4e4, #ededed) repeat scroll 0 0 transparent;
+  background: -moz-linear-gradient(center bottom, #e4e4e4, #ededed) repeat scroll 0 0 transparent!important;
   -moz-border-radius-bottomright:0px;
   -moz-border-radius-bottomleft:0px;
   -webkit-border-bottom-right-radius: 0px;
