- It could not show the users in Roles interface when login with IE8 (bnc#694769)

--- a/webclient/public/stylesheets/ie/ie_fixes.css
+++ b/webclient/public/stylesheets/ie/ie_fixes.css
@@ -38,3 +38,14 @@ input[type="checkbox"] { height:16px; width:16px;}
 /* Different width in IE and FF, TODO: find the other way to get the same lenght in different browsers */
 #group_members_string  { width:175px!important;}
 
+#status-eye { border:4px solid #666!important; background: #eeeeee url(/images/eye-grey.png) repeat; }
+#status-eye.eye_warning { background: #BD1919 url(/images/eye-red.png) repeat; }
+#status-eye.eye_healthy { background: #68b400 url(/images/eye-green.png) repeat; }
+.status_warning { background-color:#ea5656; }
+.status_ok { background-color:#59c766; }
+
+#filter, #filter label, #filter_recent { background-color: #E8E8E8; }
+
+.plugin-icon-container { background-color:#EAEAEA; border:1px solid #474747; }
+.fieldset_header { background-color:#E9E9E9; }
+
