--- a/webclient/public/stylesheets/new_inputs.css
+++ b/webclient/public/stylesheets/new_inputs.css
@@ -236,8 +236,12 @@ span.icon-yast-system{ background-position: 0 -1372px; }
 span.icon-yast-users{ background-position: 0 -1470px; }
 
 /* LAYOUT CORRECTION */
-#header { background: -moz-linear-gradient(center bottom, #b0b0b0 0%, #bfbfbf 100%); border:5px solid #666; border-width: 5px 0; }
-#header h1 { color:#333; text-shadow: 0px 1px 0px #e5e5e5; }
+#header { 
+  background: -moz-linear-gradient(center bottom, #b0b0b0 0%, #bfbfbf 100%); 
+  border:5px solid #666; 
+  border-width: 5px 0; 
+}
+#header h1 { color:#333; text-shadow: 0px 1px 0px #e5e5e5; position:absolute; width:50%; right:25%; left:25%; }
 #userbar-container {  -moz-box-shadow: 0px 0px 0px #000 inset; background: #ccc }
 
 
