--- a/plugins/roles/app/views/roles/index.rhtml
+++ b/plugins/roles/app/views/roles/index.rhtml
@@ -21,34 +21,57 @@
 #++
 %>
 
-<div class='plugin-icon'><img src='/icons/yast-permissions.png' alt="Roles module"/><%=_("Roles")%><span id="questionMark">?</span></div>
-<div class="plugin-content">
+<!-- <div class='plugin-icon'><img src'/icons/yast-permissions.png' alt="Roles module"/><%=_("Roles")%><span id="questionMark">?</span></div>
+<div class="plugin-content"> -->
+<div class="plugin-content plugin-border" style="padding:10px;">
+  <div class="plugin-header">
+    <div class="left">
+      <label class="plugin-icon-container"><img class="plugin-icon" src="/icons/yast-permissions.png"></label>
+      <label class="plugin-name"><%=_("Roles")%></label>
+      <span id="questionMark" class="right" style="margin:0px 5px; float:right;">?</span>
+    </div>
+  </div>
+
+  <div class="clearfix">&nbsp;</div>
+  
   <div id="create_role_dialog" style="display: none">
     <% form_tag '/roles/create', {:id=>'rolesForm', :class => 'container'} do %>
       <label for="role_name">Name</label><%= text_field_tag "role_name", "", :class=>"required"%>
     <% end %>
   </div>
 
-  <% form_tag '/roles/update', { :id=>'rolesUpdateForm', :class => 'container'} do %>
+ <div id="roles_tipsy_tooltip" style="display:none;">
+      <div style="float:left; width:70px;">
+        <span id="infoMark" class="info">!</span>
+      </div>
+      <div id="tooltip_message_container">
+        <label class="info_text"> <%= _("In order to assign the user to roles,")%></label>
+        <label class="info_text"> <%= _("Drag and Drop the user labels into Role containers") %></label>
+        <label class="info_text"><a id="dont_show" href=""><%= _("Don't show this again") %></a></label>
+      </div>
+      <span class="clearfix"></span>
+    </div>
+    
+  <% form_tag '/roles/update', { :id=>'rolesUpdateForm', :class => 'container webyast_form', :style=>"position:relative;"} do %>
     <span id="toolbox">
       <img id="loupe" src="../images/loupe.png">
       <input type="text" id="find_user" autocomplete="off">
       <img id="resetSearchField" class="resetSearch" src="../images/reset-search.png">
       <span id="loader"><img src='/images/spinner.gif'></span>
-      <%= link_to  (_("Create Role") ), {}, {:id => 'create_role_link', :class=>'round3' } %>
+      <%= link_to  (_("Create Role") ), {}, {:id => 'create_role_link' } %>
     </span>
 
     <div id="jqueryTab" class="fieldset-group">
       <fieldset id="assignUsers">
         <legend><span><%= _("Assign Users")%></span></legend>
     <div id="rolesContainer">
-	    <div id="rolesContent" class="round5b">
+	    <div id="rolesContent">
 
 	      <% @roles.each do |role| %>
 
 		<div id="<%= role.name %>" class="role">
 		  <span class="roleHeader">
-		    <label><img class="role" src="../images/key-grey.png"><%= role.name%></label>
+		    <label><!--<img class="role" src="../images/key-grey.png">--><%= role.name%></label>
 		    <span id="<%= role.name %>-warning" class="user-warning-message">
 		      <%= _("User already assigned") %>
 		    </span>
@@ -65,59 +88,54 @@
 	    </div>
 	  </div>
 
+  <div id="usersContainer">
+    <div id="usersContent" class="users">
+      <div class="slider-content">
+        <ol>
+        <% @tmp = Array.new %>
+        <% @users.each_with_index do |user, i|%>
+          <% unless @tmp.index(user[0][0,1]) != nil  %>
+            <% if i == 0 %>
+              <% @alpha = "'" + user[0][0,1] + "'" %>
+               <li id="<%= user[0][0,1] %>" class="title"><%=  user[0][0,1] %></li><ol class="wrapper"><li>
+            <% else %>
+              <% @alpha += ",'" + user[0][0,1] + "'" %>
+                </li></ol><li id="<%= user[0][0,1] %>" class="title"><%= user[0][0,1] %></li><ol class="wrapper"><li>
+            <% end %>
+            <% @tmp.push(user[0][0,1]) %>
+            <span class="drag user"><%= user[0] %></span>
+          <% else %>
+            <span class="drag user"><%= user[0] %></span>
+          <% end %>
+        <% end %>
+<!-- Add ful name -->
+<!--            <span class="drag user">
+              <#%# user[0] #%#>
+               <span style="position:relative;">
+                <label style="width:60%; float:none;  background:white; display:inline-block;"><#%# user[0] #%#></label>
+                <label style="  font-size:8px; float:none; background:white; position:absolute; text-transform:none; left:0; margin-top:20px; display:inline-block;"><#%# user[1] #%#></label>
+              </span>
+            </span> -->
 
-    <div id="roles_tipsy_tooltip" style="display:none;">
-      <div style="float:left; width:70px;">
-        <span id="infoMark" class="info">!</span>
+      </ol>
       </div>
-      <div id="tooltip_message_container">
-        <label class="info_text"> <%= _("In order to assign the user to roles,")%></label>
-        <label class="info_text"> <%= _("Drag and Drop the user labels into Role containers") %></label>
-        <label class="info_text"><a id="dont_show" href=""><%= _("Don't show this again") %></a></label>
-      </div>
-      <span class="clearfix"></span>
     </div>
+  </div>
+  </fieldset>
 
-
-	 <div id="usersContainer">
-	  <div id="usersContent" class="users round5b">
-	    <div class="slider-content">
-	      <ol>
-		<% @tmp = Array.new %>
-		<% @all_users_string.each_with_index do |elem, i|%>
-		  <% unless @tmp.index(elem[0,1]) != nil  %>
-		    <% if i == 0 %>
-		      <% @alpha = "'" + elem[0,1] + "'" %>
-		      <li id="<%= elem[0,1] %>" class="title"><%= elem[0,1] %></li><ol class="wrapper"><li>
-		    <% else %>
-		      <% @alpha += ",'" + elem[0,1] + "'" %>
-		      </li></ol><li id="<%= elem[0,1] %>" class="title"><%= elem[0,1] %></li><ol class="wrapper"><li>
-		    <% end %>
-		    <% @tmp.push(elem[0,1]) %>
-		    <span class="drag user"><%= elem %></span>
-		  <% else %>
-		    <span class="drag user"><%= elem %></span>
-		  <% end %>
-		<% end %>
-	      </ol>
-	    </div>
-	  </div>
-	</div>
-      </fieldset>
-
-      <fieldset id="assign-permissions">
+      <fieldset id="assign-permissions" class="webyast_form" >
         <legend><span><%= _("Assign Permissions")%></span></legend>
         <div>
-          <div class="permissions-header">
-            <span class="permission-label"><%= _("collapse all") %></span>
+          <div class="permissions-header fieldset_header" style="overflow:hidden;">
+            <span class="permission-label"><a id="collapse_all"><%= _("collapse all") %></a></span>
             <% @roles.each do |role| %>
                  <span class="role-label"><%= role.name %></span>
             <% end %>
           </div>
-
+          <div style="clear:both"></div>
           <div class="permissions-content">
             <% @prefixed_permissions.each do |prefix,permissions| %>
-              <div class="list-fieldset">
+              <div class="list-fieldset" style="border:1px solid #d8d8d8; border-radius:2px; background-color:#fafafa" >
 
                 <div class="permissions-group-header list-fieldset-header">
                   <span class="permission-label"><%= prefix %></span>
@@ -200,7 +218,15 @@
 
       $("#roles_submit_button").click( function () { blockForm(); });
       $("img.deleteRole").click( function () { blockForm(); });
-      $('#usersContent').sliderNav({items:[<%= @alpha %>], arrows:false });
+
+
+      if($.browser.msie() && $.browser.version.number() == 8 ) {
+        $('#usersContent ol').css('padding', '0').css('margin', '0');
+        $('#usersContent ol li').css('padding', '5px')
+      } else {
+        $('#usersContent').sliderNav({items:[<%= @alpha %>], arrows:false });
+      }
+
     });
 
     function clearForm() {
@@ -231,7 +257,8 @@
 
     function blockForm() {
       var message = "<%= _("Please wait") -%>";
-      disableFormOnSubmit(message);
+      //disableFormOnSubmit(message);
+      $.modalDialog.wait( {message: message});
     }
 
     function groupedFields(group_role_id) {
