--- a/webclient/public/stylesheets/webyast-roles.css
+++ b/webclient/public/stylesheets/webyast-roles.css
@@ -22,50 +22,51 @@
 #role_name { float:left; }
 #rolesForm label.error { font-size: 12px; }
 
+#rolesUpdateForm { border:1px solid transparent; }
+#jqueryTab { margin:12px 5px; }
+
+
 #rolesUpdateForm fieldset {
-  -moz-border-radius: 0px 0px 0px 0px;
+  border-radius: 0px 0px 0px 0px;
+  border:1px solid #d8d8d8;
+  border-top:0px;  
   background-color:#fff;
- -moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
 }
 
 #rolesUpdateForm .fieldset-group .ui-widget-header {
-  background: url(../images/tab-header.png) repeat-x 0px 0px #fff;
-  margin:0px; padding:0px;
+  color:#555555;
+  vertical-align:middle;
+  background: -webkit-gradient(linear, left top, left bottom, from(#ededed), to(#e4e4e4));
+  background: -moz-linear-gradient(center bottom, #e4e4e4, #ededed) repeat scroll 0 0 transparent!important;
   -moz-border-radius-bottomright:0px;
   -moz-border-radius-bottomleft:0px;
-  border-bottom-left-radius: 0px;
+  -webkit-border-bottom-right-radius: 0px;
+  -webkit-border-bottom-left-radius: 0px;
   border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border:1px solid #d8d8d8;  
+  padding:10px 10px 0px 10px;
+  margin:0;
 }
-#rolesUpdateForm .fieldset-group fieldset.ui-tabs-panel { border-radius:0px; }
+
 
 #rolesUpdateForm .fieldset-group.ui-tabs .ui-tabs-nav { position:static; padding-top:6px; }
 #rolesUpdateForm .fieldset-group.ui-tabs .ui-tabs-nav li a { padding:2px 10px 4px 10px; margin-bottom:1px; margin-top:4px; }
 #rolesUpdateForm .fieldset-group li:first-child { margin-left: 0px; }
 
-#rolesUpdateForm .fieldset-group li.ui-state-default span{ color:#eee;   font-size:12px; }
-#rolesUpdateForm .fieldset-group li.ui-state-default {
-  background-color:#666;
-  -moz-box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.7);
-  -webkit-box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.7);
-  border-color:#666;
-  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.5);
-}
+#rolesUpdateForm .fieldset-group li.ui-state-default span, #rolesUpdateForm .fieldset-group li.ui-tabs-selected span {   font-size:13px; color:#444;  }
 
-#rolesUpdateForm .fieldset-group li.ui-state-default:hover {
-  background-color:#777;
-  border-color:#666;
-  -moz-box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.7),inset 0px 0px 5px rgba(255, 255, 255, 0.2);
-  -webkit-box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.7);
-   color:#444;
-}
-
-#rolesUpdateForm .fieldset-group li.ui-tabs-selected, #rolesUpdateForm .fieldset-group li.ui-tabs-selected:hover {
+#rolesUpdateForm .fieldset-group li.ui-tabs-selected, #rolesUpdateForm li.ui-state-active { 
   background-color:#fff;
-  -moz-box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.7);
-  -webkit-box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.7);
+  padding:0px;
+  border-color: #ccc;
 }
 
-#rolesUpdateForm .fieldset-group li.ui-tabs-selected span { color:#333; font-size:12px; text-shadow: 0px 0px 1px rgba(200, 200, 200, 0.3); }
+#rolesUpdateForm .fieldset-group li.ui-state-default {
+  border: 1px solid #D8D8D8;
+  text-shadow: 1px 1px #fdfdfd;
+}
+
 
 #rolesContainer, #usersContainer { font-size:13px; background-color: #fff; max-height:600px; }
 #rolesContainer { width:50%; overflow:auto; padding-right:2px; float:left; }
@@ -75,9 +76,7 @@
 #rolesHeader, #usersHeader { text-align:left; display:block; }
 #rolesHeader label, #usersHeader label { text-align:left; vertical-align:middle; }
 
-span.roleHeader label { font-weight:bold;  text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.9); vertical-align:middle; color:#444; }
-
-#rolesUpdateForm, #assignUsers { border:1px solid #ddd;}
+/*#assignUsers, #assign-permissions { border:1px solid transparent;}*/
 
 #rolesUpdateForm div.role {
   background-color:#fff;
@@ -85,14 +84,18 @@ span.roleHeader label { font-weight:bold;  text-shadow: 0px 1px 0px rgba(255, 25
   display:block;
   margin-bottom:10px;
 }
+span.roleHeader label { font-weight:bold;  text-shadow: 0px -1px 0px #222; vertical-align:middle; color:#f5f5f5; }
 
 #rolesContent span { vertical-align:middle; }
-#rolesContent label { display:inline-block; float:none; text-align: left; margin: 0 0 0 5px; vertical-align:middle; }
+#rolesContent label { display:inline-block; float:none; text-align: left; margin: 0 0 2px 5px; vertical-align:middle; text-transform: capitalize; }
 
 #assignUsers span.roleHeader {
   padding:4px 0px 4px 0px;
-  background-color:#eee;
-  border:1px solid #e0e0e0;
+  background-color:#666;
+  background: -moz-linear-gradient(center bottom , #474747, #666) repeat scroll 0 0 transparent;
+  border-color:#666666;
+  border-style:solid;
+  border-width: 1px 1px 0px 1px;
   display:block;
 }
 
@@ -101,47 +104,85 @@ span.roleHeader label { font-weight:bold;  text-shadow: 0px 1px 0px rgba(255, 25
   vertical-align:middle;
   display:block;
   padding:5px;
-  border-width: 0px 1px 1px 1px;
-  border-color:#e0e0e0;
+  border-width: 1px 1px 1px 1px;
+  border-color:#d8d8d8;
   border-style:solid;
+  position:relative;
+  overflow: hidden;
+  clear:both;
 }
 
 #usersContent {
   overflow:auto;
-  border:3px solid #e5e5e5;
-  -moz-box-shadow: inset 0px 0px 8px rgba(0, 0, 0, 0.7);
-  -webkit-box-shadow: inset 0px 0px 8px rgba(0, 0, 0, 0.7);
+  border:1px solid #d8d8d8;
 }
 
-span.assigned { min-width:140px; margin-right:0px;}
-span.drag { min-width:130px; margin-right:0px;}
+span.drag {
+  min-width:120px;
+  max-width: 120px; 
 
-span.user {
-  display: inline-block;
-  font-weight:bold;
-  font-size:11px;
-  cursor:default;
-}
-span.user:first-child { margin-left: 0px; }
-span.user:before {
-  vertical-align:-50%;
-  line-height:10px;
-  padding-right:3px;
-  content:url(../images/greenuser.png);
+  cursor:move; 
+  overflow: hidden;
+  text-overflow:ellipsis;
+  white-space: nowrap;
 }
 
-span.drag { cursor:move; }
 span.drag-active {
   position: absolute;
-  -moz-border-radius:3px;
-  -webkit-border-radius:3px;
+  border-radius:3px;
   -moz-box-shadow: 0 0 5px #eee;
   background:#f5f5f5;
   border:2px solid #666;
   padding:3px;
 }
 
-span.drop-available { background-color: #FDFFF3; }
+span.user {
+  cursor:default;
+  width: 120px;
+  height:32px; 
+  padding:0;
+  margin:0;
+  
+  display: inline-block;
+
+  font-size:13px;
+  color: #626466;
+}
+
+span.user:first-child { margin-left: 0px; }
+span.user:before {
+  vertical-align:-120%;
+  vertical-align:-70%;
+/*  line-height:20px;*/
+
+  padding:0;
+  margin:0;
+  padding-right:5px!important;
+  content:url(../images/user-roles.png);
+}
+
+span.assigned { 
+  min-width:132px; 
+  padding:0;
+  margin:0;
+  margin-right:5px;
+  overflow: hidden;
+  white-space: nowrap;
+  float:left;
+  color: #626466;
+}
+
+span.assigned:hover {
+  border-radius:3px;
+  border-radius:3px;
+  background-color:#f2f2f2;
+}
+
+
+span.drop-available { 
+  background-color: #FDFFF3; 
+  border:1px dashed grey!important; 
+}
 
 span.user-warning-message {
   text-align:center;
@@ -149,118 +190,131 @@ span.user-warning-message {
   color:#CE1717;
   font-weight:bold;
   font-size:11px;
-  text-shadow: 0 1px 0px rgba(255, 255, 255, 1);
+  text-shadow: none;
+  background-color:#f5f5f5;
+  padding: 1px 5px;
+  border-radius: 2px;
   display:none;
 }
 
-/*span.user-warning-message img {*/
-/*  height:16px;*/
-/*  width:16px;*/
-/*  vertical-align: text-top;*/
-/*  display:inline-block;*/
-/*}*/
 
-/*span.roles_warning {*/
-/*  background-color:#fff;*/
-/*  background: -moz-linear-gradient(90deg, #fff, #f5f5f5) repeat scroll 0 0 transparent;*/
-/*  display:block;*/
-/*  padding:5px 5px 0px 5px;*/
-/*  border: 2px solid #666;*/
-/*  -moz-border-radius:5px;*/
-/*  -webkit-border-radius:3px;*/
-/*  -moz-box-shadow:0 0 5px #ccc;*/
-/*  -webkit-box-shadow:0 0 5px #888888;*/
-/*  color:#444;*/
-/*  font-size:11px;*/
-/*  font-weight:bold;*/
-/*  text-shadow: 0 1px 0px rgba(255, 255, 255, 1);*/
-/*  vertical-align:middle;*/
-/*  line-height:22px;*/
-/*}*/
 
-/*span.roles_warning:before {*/
-/*  vertical-align:middle;*/
-/*  display:inline;*/
-/*  float:left;*/
-/*  margin-right:3px;*/
-/*  content:url(../images/warning.png);*/
-/*}*/
 
-span.assigned:hover {
-  -moz-border-radius:3px;
-  -webkit-border-radius:3px;
-  -moz-box-shadow: 0 0 5px #eee;
-  background:#f2f2f2;
+img.role { vertical-align:middle; height:16px; width:16px; margin-right:5px; }
+img.deleteRole { 
+  vertical-align:middle; 
+  float:right;
+  background: none repeat scroll 0 0 #a0a0a0;
+  border-radius: 100% 100% 100% 100%;
+  margin-right:2px; 
 }
 
-img.role { vertical-align:middle; height:16px; width:16px; margin-right:4px; }
-img.deleteUser { vertical-align:middle; float:right; cursor:pointer; height:16px; width:16px;   -moz-border-radius:3px; -webkit-border-radius:3px; }
-img.deleteRole { vertical-align:middle; float:right; -moz-border-radius:3px; -webkit-border-radius:3px; }
-img.deleteUser:hover, img.deleteRole:hover { background:#ccc;}
+.delete-image-wrapper {
+  position:relative;
+  float: right;
+/*  height:24px; */
+/*  width:24px;*/
+/*  min-width: 130px;*/
+/*  vertical-align:middle; */
+/*  display:inline-block;*/
+/*  float:right;*/
+}
+
+img.deleteUser { 
+  vertical-align:middle; 
+  cursor:pointer; 
+  height:24px; 
+  width:24px; 
+  margin:4px 2px 0px 0px; 
+  border-radius:2px; 
+  position: absolute; 
+  right:0;  
+}
+
+img.deleteUser:hover, img.deleteRole:hover { background:#ccc; background:#d80000; }
 img.deleteUser:active, img.deleteRole:active { background:#d80000;}
 
-#rolesUpdateForm span#toolbox { float:right; vertical-align:middle; margin:14px 18px 0px 0px; padding:4px 5px 4px 0px; width:46%;  clear:both; }
+#rolesUpdateForm span#toolbox { float:right; vertical-align:middle; postion:relative; margin:14px 18px 0px 0px; padding:4px 0px 4px 0px; width:46%;  clear:both; }
 img.resetSearch {
+  position:absolute;
   background-color:#fff;
   vertical-align: middle;
-  margin: 0px 15px 0px -26px;
+
+  margin:5px 0px 0px 158px;
   display:none;
+  z-index: 2;
 }
 
 img#loupe {
   background-color:#fff;
   vertical-align: middle;
-  margin: 3px -20px 0px 5px;
+  margin-top:5px;
+  margin-left:2px;
   position:absolute;
+  z-index: 2;
 }
 
 input#find_user {
   width:150px;
-  height:16px;
-  margin-left:3px;
-  margin-right:2px;
-  padding: 1px 20px 2px 20px;
-  border: 1px solid #666666;
+
+  position:absolute;
+  padding-left:20px;
+  z-index: 1;
+  border-radius:2px;
+
+  background-color: #FEFEFE;
+  border-color: #C4C4C4 #E0E0E0 #E0E0E0 #C4C4C4;
+
+  border-style: solid;
+  border-width: 1px;
+  box-shadow: 0 0 0 #EEEEEE inset;
+  color: #555555;
+  font-weight: normal;
+  height: 16px;
   vertical-align: middle;
+/*  line-height: 26px;*/
 }
 
 #loader {
   width:18px;
-  -moz-border-radius:50%;
-  -webkit-border-radius:50%;
-  border: 1px solid #666666;
+  border-radius:18px;
+  border: 1px solid #d8d8d8;
   vertical-align: middle;
-  display:inline-block;
   text-align:center;
   visibility:hidden;
-  background: -moz-linear-gradient(center top , #777777 0%, #666666 50%, #555555 51%, #333333 100%) repeat scroll 0 0 transparent;
+  margin:2px 0px 0px 180px;
+  position:absolute;
 }
 
 #loader img { width:16px; height:16px; vertical-align: middle; }
 
 #create_role_link {
-  height:16px;
-  background-color:#666;
+  position:absolute;
+  right:0;
+  margin:-1px 24px 0px 0px;
+  color: #666666;
+  line-height: 26px;
+  border-color: #CCCCCC #EEEEEE #EEEEEE #CCCCCC;
+  border-style: solid;
+  border-width: 1px;
+  padding:0px;
+
+  display: inline-block;
+  text-align:center;
   vertical-align:middle;
-  padding:2px 10px;
-  color:#f5f5f5;
-  border:1px solid #666;
-  float:right;
-  -moz-box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.6);
-  -webkit-box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.6);
-  background:-moz-linear-gradient(center top , #777 0%, #666 50%, #555 51%, #333 100%) repeat scroll 0 0 transparent;
-  background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#777), color-stop(50%,#666), color-stop(51%,#555), color-stop(100%,#333));
-  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.9);
+  font-weight: bold;
+  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.7);
+  
+  background: -moz-linear-gradient(center bottom , #CCCCCC, #FFFFFF) repeat scroll 0 0 transparent;
+  background: -webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#CCCCCC));
+  min-width:120px;
 }
 
 #create_role_link:hover {
-  color:#e5e5e5;
-  background-color:#999;
-  -moz-box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.9),inset 0px 0px 5px rgba(255, 255, 255, 0.2);
-  -webkit-box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.9),inset 0px 0px 5px rgba(255, 255, 255, 0.2);
-  background:-moz-linear-gradient(center top , #888 0%, #777 50%, #666 51%, #444 100%) repeat scroll 0 0 transparent;
-  background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#888), color-stop(50%,#777), color-stop(51%,#666), color-stop(100%,#444));
-  border:1px solid #666;
+  -moz-box-shadow: 0px 0px 30px #a0a0a0 inset, 0px 0px 2px #333 inset;
+  -webkit-box-shadow: 0px 0px 30px #a0a0a0 inset, 0px 0px 2px #333 inset;    
+  color:#444;
+  text-shadow: 0px 1px 0 #eee!important;
 }
 
 /*label.error { font-size:11px; margin:0px; float:none; display:inline; font-weight:bold; color:#990000; padding-left:.5em; vertical-align:middle; }
@@ -270,8 +324,18 @@ input.error { float: none;} */
 .permission-label { width: 22em; float: left; cursor: pointer; }
 .permission-field, .role-label { width: 8em; float: left; text-align: center; }
 .permissions-content, .permissions-group-row { clear: left; }
+.permissions-content { padding: 0 5px; }
 .permissions-group-row .permission-label { margin-left: 2em; width: 20em; }
-.permissions-header { margin: 0em 1.5em; }
+
+.permissions-header { 
+  margin: 0em 15px;
+  padding:0px 5px;
+  border:1px solid #d8d8d8; 
+  border-radius:2px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
 input#role_name { margin-left:5px; }
 input.computed { opacity: 0.5; }
 
@@ -349,4 +413,12 @@ input.computed { opacity: 0.5; }
 }
 
 #dont_show { float:right; color:#3399CC; margin-right:5px; }
+
+#collapse_all {
+  border-bottom: 1px dotted #555555; 
+  font-size:13px;
+  color: #444444;
+  text-shadow: 0 1px 0px #fff;
+}
+
 
