--- a/webclient/public/stylesheets/webyast-controlpanel.css
+++ b/webclient/public/stylesheets/webyast-controlpanel.css
@@ -44,19 +44,16 @@
 
   background: -moz-radial-gradient(center 45deg, circle closest-side, #eee 0%, #474747 100%) transparent;
   background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 56, from(#eeeeee), to(#474747));
-  /*  background: -webkit-gradient(circle, #eee, #000000);*/
 }
 
 #status-eye.eye_healthy {
   background: -moz-radial-gradient(center 45deg, circle closest-side, #68b400 0%, #474747 100%) transparent;
   background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 50, from(#68b400), to(#474747));
-  /*  background-image: -webkit-radial-gradient(circle, #68b400, #000000);*/
 }
 
 #status-eye.eye_warning {
   background: -moz-radial-gradient(center 45deg, circle closest-side, red 0%, #474747 99%);
   background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 56, from(red), to(#474747));
-  /*  background-image: -webkit-radial-gradient(circle, red, #000000);*/
 }
 
 div.statusbar_header {
@@ -148,14 +145,15 @@ div.statusbar_row label { margin-left: 5px; vertical-align: middle; }
 }
 
 .status_warning {
+  background-color:#ea5656;
   background: -moz-radial-gradient(center center 45deg, circle closest-side, #ea5656 0%, #7b3232 100%) repeat scroll 0 0 transparent;
   background: -webkit-gradient(radial, 50% 50%, 2, 50% 50%, 10, from(#ea5656), to(#7b3232));
 }
 
 .status_ok {
+  background-color:#59c766;
   background: -moz-radial-gradient(center center 45deg, circle closest-side, #59c766 0%, #25712e 100%) repeat scroll 0 0 transparent;
   background: -webkit-gradient(radial, 50% 50%, 2, 50% 50%, 10, from(#59c766), to(#25712e));
-  /*  background: -moz-linear-gradient(center bottom , #25712e, #59c766) repeat scroll 0 0 transparent;*/
 }
 
 #favorites { border-color: #eee; }
