- added cursor:move to user label

--- a/webclient/public/stylesheets/webyast-roles.css
+++ b/webclient/public/stylesheets/webyast-roles.css
@@ -120,7 +120,6 @@ span.roleHeader label { font-weight:bold;  text-shadow: 0px -1px 0px #222; verti
 span.drag {
   min-width:120px;
   max-width: 120px; 
-
   cursor:move; 
   overflow: hidden;
   text-overflow:ellipsis;
@@ -137,7 +136,7 @@ span.drag-active {
 }
 
 span.user {
-  cursor:default;
+/*  cursor:default;*/
   width: 120px;
   height:32px; 
   padding:0;
