--- a/plugins/users/app/views/users/_user_form.erb
+++ b/plugins/users/app/views/users/_user_form.erb
@@ -144,7 +144,9 @@
       </fieldset>
   </div>
 
+   <div style="padding:0px 0px;">
    <div class="nav-buttons">
+    <div class="hr">&nbsp;</div>
     <div id="progress_<%= (new ? "" : user.uid) -%>" style="display: none; margin-bottom: 10px"><img src="/images/working.gif" alt="Working"/><span style="vertical-align: 50%; margin-left: 5px">...Wait...</span></div>
        <%= submit_tag _("Save"), :onclick=>"return user_validation(this, '"+ (new ? "" : user.uid) +"');", :disabled => disabled  %>
        <% if @permissions[:userdelete] && !new %>
@@ -158,6 +160,6 @@
     	<%= form_cancel_button :action => :index%>
        <% end %>
     </div>
-
+ </div>
 
 
