--- a/plugins/users/app/views/groups/new.html.erb
+++ b/plugins/users/app/views/groups/new.html.erb
@@ -22,6 +22,7 @@
   <% if JSMIN == true %>
     <%= javascript_include_tag "min/users-min.js"-%>
   <% else %>
+    <%= stylesheet_link_tag "webyast-users" %>
     <%= javascript_include_tag "users.js" %>
     <%= javascript_include_tag "select_dialog.js" %>
   <% end %>
@@ -33,10 +34,6 @@
   <% end %>
 
   <style type="text/css">
-    label.error {
-         display: none; float:left; color: #990000; font-weight:bold; margin-left:10px;
-    }
-
     .GContainerUser, .GContainerGroups {
         float: left;
         margin: 3px;
@@ -46,8 +43,8 @@
      .GBox {
         border: #000 1px solid;
         cursor: pointer;
-	display: block;
-	float: left;
+        display: block;
+        float: left;
         font-family: verdana, tahoma, arial;
         font-size: 10px;
         margin-bottom: 5px;
@@ -87,54 +84,75 @@
 </script>
 <%
  disabled = ! ((@permissions[:groupadd] && @adding) || (@permissions[:groupmodify] && !@adding)) %>
-<div class='plugin-icon'><img alt="yast-groups" src='/icons/yast-groups.png' alt="groups module"/>
+
+<!-- <div class='plugin-icon'><img alt="yast-groups" src='/icons/yast-groups.png' alt="groups module"/>
   <%=_("Groups") + header_spacer %><span id="questionMark">?</span>
   <%= _("Add new group") %>
-</div>
+</div> -->
 
-<div class="plugin-content">
-
-<%= render :partial => 'shared/missing_write_permissions' if disabled %>
-
-<% form_for :group, :url => { :action => "create" }, :html => { :id => "form_", :autocomplete => :off, :onsubmit => "form_handler('')"}  do |f| %>
-  <%= f.error_messages %>
-  <%= f.hidden_field :old_cn %>
-
-  <fieldset>
-    <p>
-      <label><%=_("Group Name")%></label>
-      <%= f.text_field :cn, :disabled => false, :class => "required" %>
-    </p>
-    <p>
-      <label><%=_("Members")%></label>
-      <%= f.text_field :members_string, :disabled => false, :onkeyup => "members_validation(this);" %>
-      
-      <% if @permissions[:usersget] == true %>
-        <a href="#" id="manage_members" class="button" onClick="select_users_open('');return false;"><%= _("Manage Members") -%></a>
-	<%= f.hidden_field :group_type %><label id="users-error" class="error"></label>
-      <% end %>
-    </p>
-    <!--<p><%= f.hidden_field :group_type %><label id="users-error" class="error"></label><p>-->
-  </fieldset>
-
-  <div class="nav-buttons">
-    <div id="progress_" style="display: none; margin-bottom: 10px"><img src="/images/working.gif" alt="Working"/><span style="vertical-align: 50%; margin-left: 5px">...Wait...</span></div>
-    <% message = _('Please wait')%>
-    <%= submit_tag _("Save"), 
-    :onclick=>"return $('#form_').validate({
-      submitHandler: function(form) {
-	var message = '#{message}'; 
-	disableFormOnSubmit(message); form.submit();
-      }
-    });" %>
-
-    
-
-    <%= form_str_spacer %>
-	 <%= form_cancel_button :action => :index %>
+<!--<div class="plugin-content"> -->
+<div id="new_group" class="plugin-content plugin-border">
+  <%= render :partial => 'shared/missing_write_permissions' if disabled %>
+  
+  <div class="plugin-header">
+    <div class="left">
+      <label class="plugin-icon-container"><img class="plugin-icon" src="/icons/groups.png"></label>
+      <label class="plugin-name"><%= _("Groups") + header_spacer + _("Add new group")%></label>
+    </div>
   </div>
+  
+  <div class="clearfix">&nbsp;</div>
+    <% form_for :group, :url => { :action => "create" }, :html => { :id => "form_", :class=>"webyast_form", :autocomplete => :off, :onsubmit => "form_handler('')"}  do |f| %>
+      <%= f.error_messages %>
+      <%= f.hidden_field :old_cn %>
 
-<% end %>
+      <fieldset class="webyast_fieldset">
+        <div class="fieldset_header">
+           <span class="fieldset_header_title" >
+           <%= _("Add new group") %>
+            <!--<span style="float:none; color:#777777; font-size:10px; margin-left:2px;">(manual)</span>-->
+          </span>
+        </div>
+        
+        <div class="fieldset_body">
+          <div class="row manual">
+            <label><%=_("Group Name")%></label>
+            <%= f.text_field :cn, :disabled => false, :class => "required" %>
+          </div>
+          <div class="row manual">
+            <label><%=_("Members")%></label>
+            <%= f.text_field :members_string, :disabled => false, :onkeyup => "members_validation(this);" %>
+            <% if @permissions[:usersget] == true %>
+            <a href="#" id="manage_members" class="button" onClick="select_users_open('');return false;"><%= _("Manage Members") -%></a>
+            <%= f.hidden_field :group_type %><label class="error"></label>
+              <div class="clearfix">&nbsp;</div>
+          <% end %>
+          </div>
+       </div>
+      </fieldset>
+
+      <div style="padding:5px 5px;">
+       <div class="nav-buttons">
+         <div class="hr">&nbsp;</div>
+          <div class="clearfix">&nbsp;</div>
+        
+        <!--<div id="progress_" style="display: none; margin-bottom: 10px"><img src="/images/working.gif" alt="Working"/><span style="vertical-align: 50%; margin-left: 5px">...Wait...</span></div>-->
+          
+          <% message = _('Please wait')%>
+          <%= submit_tag _("Save"), 
+          :onclick=>"return $('#form_').validate({
+            submitHandler: function(form) {
+              var message = '#{message}'; 
+              $.modalDialog.wait( {message: message}); 
+              form.submit();
+            }
+          });" %>
+
+         <%= form_str_spacer %>
+         <%= form_cancel_button :action => :index %>
+      </div>
+    <% end %>
+
     <div><input type="hidden" id="all_users_string" value="<%= @all_users_string %>" /></div>
     <div><input type="hidden" id="system_users_string" value="<%= @all_sys_users_string %>" /></div>
 </div>
