--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -22,6 +22,7 @@
   <% if JSMIN == true %>
     <%= javascript_include_tag "min/users-min" -%>
   <% else %>
+    <%= stylesheet_link_tag "webyast-users" %>
     <%= javascript_include_tag "users.js" %>
     <%= javascript_include_tag "select_dialog.js" %>
   <% end %>
@@ -152,7 +153,8 @@ function def_group_validation(which){ return true; }
     },
     submitHandler: function(form) {
       var message = <%= jss _("Please wait") -%>;
-      disableFormOnSubmit(message);
+      //disableFormOnSubmit(message);
+      $.modalDialog.wait( {message: message});
       form.submit();
     }
     
@@ -198,12 +200,23 @@ function def_group_validation(which){ return true; }
 <% end %>
 
 <% disabled = ! @permissions[:useradd] %>
-<div class='plugin-icon'><img src='/icons/yast-users.png' alt="users module"/>
-  <%=_("Users") + header_spacer + _("Add new user")%>
+<!-- <div class='plugin-icon'><img src='/icons/yast-users.png' alt="users module"/>
+  <%_("Users") + header_spacer + _("Add new user")%>
 </div>
 
-<div class="plugin-content">
- <% form_for :user, :url => { :action => "create"}, :html => { :id => "form_", :autocomplete => :off, :onsubmit => "form_handler('')",}  do |f| %>
+<div class="plugin-content"> -->
+<div id="new_user" class="plugin-content plugin-border">
+
+  <div class="plugin-header">
+    <div class="left">
+      <label class="plugin-icon-container"><img class="plugin-icon" src="/icons/users.png"></label>
+      <label class="plugin-name"><%= _("Users") + header_spacer + _("Add new user")%></label>
+    </div>
+  </div>
+
+  <div class="clearfix">&nbsp;</div>
+
+ <% form_for :user, :url => { :action => "create"}, :html => { :id => "form_", :class=>"webyast_form", :autocomplete => :off, :onsubmit => "form_handler('')",}  do |f| %>
   <%= f.error_messages %>
 
   <%= render :partial => "user_form", :locals =>{ :f => f, :disabled => disabled, :user => @user, :new => true } %>
